--- a/CosmosMongoCFNew/App.config
+++ b/CosmosMongoCFNew/App.config
@@ -23,8 +23,8 @@
     <!-- Transformation -->
     <!-- transformationType = "NONE, AGGRIGATION, DELETION"-->
     <add key="transformationType" value="AGGRIGATION"/>
-    <add key="sourceKeys" value="id,orderid,seqId"/>
-    
+    <add key="sourceKeys" value="id,postDate"/>    
+    <add key="sourceKeyTransformation" value="{'Key':'postDate', 'TransformationType':'DATE', 'Format':'yyyy|MM' }"/>
     <add key="delimiter" value="|"/>
     <add key="destinationKey" value="pk"/>
     
