--- a/CosmosMongoCFNew/CosmosMongoCFNew.csproj
+++ b/CosmosMongoCFNew/CosmosMongoCFNew.csproj
@@ -158,6 +158,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SourceTransformation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transformation.cs" />
