--- a/CosmosMongoCFNew/CosmosMongoCFNew.csproj
+++ b/CosmosMongoCFNew/CosmosMongoCFNew.csproj
@@ -162,6 +162,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transformation.cs" />
+    <Compile Include="Transformations\BsonDocumentFilter.cs" />
+    <Compile Include="Transformations\Filter.cs" />
+    <Compile Include="Transformations\Pipe.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
