--- a/CosmosMongoCFNew/CosmosMongoCFNew.csproj
+++ b/CosmosMongoCFNew/CosmosMongoCFNew.csproj
@@ -161,6 +161,7 @@
     <Compile Include="SourceTransformation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SwapKeyValue.cs" />
     <Compile Include="Transformation.cs" />
     <Compile Include="Transformations\BsonDocumentFilter.cs" />
     <Compile Include="Transformations\Filter.cs" />
