--- a/CosmosMongoCFNew/packages.config
+++ b/CosmosMongoCFNew/packages.config
@@ -3,6 +3,7 @@
   <package id="Crc32C.NET" version="1.0.5.0" targetFramework="net461" />
   <package id="DnsClient" version="1.2.0" targetFramework="net461" />
   <package id="Microsoft.Azure.Cosmos" version="3.6.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.1" targetFramework="net461" />
